# AOP-app-v2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_BACKEND.md  Dockerfile  FRICTIONS_EXPERT_METIER.md  GUIDE_UTILISATEUR.md  OPTIMISATION.md  PLAN.md  PROMPT_CLAUDE_CODE.md  README.md  arborescence.md  donnees_de_ref.md  fly.toml  start.sh
backend/: pyproject.toml
backend/app/: main.py  pipeline_support.py  progress.py  settings.py
backend/app/api/: classification.py  completeness.py  dossiers.py  extraction.py  project_synthesis.py  (+2 more)
backend/config/: extraction_schema.yaml  models.yaml  pieces_checklist.yaml  synthese_projet_schema.yaml  taxonomy.yaml
backend/tests/: conftest.py  test_api_classification_integration.py  test_api_completeness_integration.py  test_api_extraction_integration.py  test_api_pipeline_integration.py  test_api_project_synthesis_integration.py  test_api_project_synthesis_perplexity_integration.py  test_classify_engine.py  test_classify_filename_signal.py  test_classify_pipeline.py  test_completeness_engine.py  test_completeness_pipeline.py  test_completeness_report.py  test_document_signal.py  test_extraction_engine.py  test_extraction_report.py  test_extraction_schema.py  test_inventory.py  test_mistral_client.py  test_naming.py  test_pieces_checklist.py  test_pipeline_support.py  test_progress.py  test_reorg_apply.py  test_settings.py  test_synthesis_engine.py  test_synthesis_perplexity_client.py  test_synthesis_perplexity_engine.py  test_synthesis_schema.py  test_taxonomy.py  test_text_extraction.py  test_unzip.py
(+53 files in other folders)
